--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = vim/bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
 
+[submodule "vim/bundle/fugitive"]
+	path = vim/bundle/fugitive
+	url = http://github.com/tpope/vim-fugitive.git
