--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,9 @@
 [submodule "vim/bundle/fonts"]
 	path = vim/bundle/fonts
 	url = https://github.com/powerline/fonts.git
+[submodule "bash/terminal_colors"]
+	path = bash/terminal_colors
+	url = https://github.com/Anthony25/gnome-terminal-colors-solarized.git
+[submodule "bash/dir_colors"]
+	path = bash/dir_colors
+	url = https://github.com/seebi/dircolors-solarized.git
