--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "bash/dir_colors"]
 	path = bash/dir_colors
 	url = https://github.com/seebi/dircolors-solarized.git
+[submodule "bash/powerline_fonts"]
+	path = bash/powerline_fonts
+	url = https://github.com/powerline/fonts.git
